# rainfall-prediction-classifier

./: .env.example  .gitattributes  .gitignore  .replit  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
attached_assets/: Pasted-You-are-working-inside-rainfall-prediction-classifier-B_1777778462428.txt
configs/: data.yaml  inference.yaml  train.yaml
data/: README.md
docs/research_pack/: ACADEMIC_RESEARCH_BRIEF.md  CALIBRATION_AND_THRESHOLDING_PROTOCOL.md  DATASET_AND_TASK_CARD.md  ERROR_ANALYSIS_PLAYBOOK.md  INTERPRETABILITY_PROTOCOL.md  LEAKAGE_AND_SPLIT_RISK_AUDIT.md  METRIC_PROVENANCE_MATRIX.md  MODEL_CARD.md  README.md  REPRODUCIBILITY_CHECKLIST.md  TEMPORAL_VALIDATION_PROTOCOL.md
models/: README.md
notebooks/: Australian_Rainfall_Prediction.ipynb  README.md  exploration.ipynb
results/: README.md  classification_report.txt  metrics.json  model_comparison.csv
results/sample_predictions/: README.md  example_input.json
scripts/: run_evaluate.py  run_predict.py  run_train.py
src/rainfall_prediction/: __init__.py  config.py  data.py  evaluate.py  features.py  pipeline.py  predict.py  train.py  utils.py  visualization.py
tests/: test_config.py  test_metric_provenance.py  test_pipeline.py  test_predict.py  test_research_pack_exists.py
tools/evidence/: README.md  validate_research_pack.py
